--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,9 @@
-POSTGRES_DB=kittygram
+POSTGRES_DB=kittygram_db
 POSTGRES_USER=kittygram_user
-POSTGRES_PASSWORD=kittygram_password
-DB_NAME=kittygram
+POSTGRES_PASSWORD=your_strong_password
+DB_HOST=db
+DB_PORT=5432
+
+SECRET_KEY=your_secret_key
+DEBUG=False
+ALLOWED_HOSTS=your_domain.com
