--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,25 +3,32 @@ version: '3'
 volumes:
   pg_data:
   static:
+  media:
 
 services:
   db:
     image: postgres:13
+    env_file: .env
     volumes:
       - pg_data:/var/lib/postgresql/data
   backend:
     build: ./backend/
     env_file: .env
+    volumes:
+      - static:/backend_static
+
   frontend:
     env_file: .env
     build: ./frontend/
-    command: cp -r /app/build/. /static/
+    command: cp -r /app/build/. /frontend_static/
     volumes:
-      - static:/static
+      - static:/frontend_static
+
   gateway:
-    build: ./nginx/
+    build: ./gateway/
     env_file: .env
-    ports:
-      - 9000:80
     volumes:
-      - static:/static
+      - static:/var/www/kittygram/static
+      - media:/var/www/kittygram/media
+    ports:
+      - 8080:80
