--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,18 +1,29 @@
 server {
-  listen 80;
-  index index.html;
+    server_name fyrno.ru;
 
-  location /api/ {
-    proxy_set_header Host $http_host;
-    #proxy_pass http://backend:8000/api/;
-  }
-  location /admin/ {
-    proxy_set_header Host $http_host;
-    #proxy_pass http://backend:8000/admin/;
-  }
+    location /api/ {
+        proxy_pass http://127.0.0.1:8080;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
 
-  location / {
-    alias /static/;
-    try_files $uri $uri/ /index.html;
-  }
+    location /admin/ {
+        proxy_pass http://127.0.0.1:8080;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
+
+    location /static/ {
+        alias /var/www/kittygram/static/;
+    }
+
+    location /media/ {
+        alias /var/www/kittygram/media/;
+    }
+
+    location / {
+        root   /var/www/kittygram;
+        index  index.html index.htm;
+        try_files $uri /index.html;
+    }
 }
