--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -1,14 +1,14 @@
 volumes:
-  pg_data_production:
-  static_volume:
-  media_volume:
+  pg_data:
+  static:
+  media:
 
 services:
   db:
     image: postgres:13.10
     env_file: .env
     volumes:
-      - pg_data_production:/var/lib/postgresql/data
+      - pg_data:/var/lib/postgresql/data
 
   backend:
     image: fyrno/kittygram_backend
