--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,4 @@
-"""Этот файл я попросил подкаректировать у ии."""
-
-name: CI/CD
+name: Kittygram CI/CD
 
 on:
   push:
@@ -8,63 +6,123 @@ on:
       - main
 
 jobs:
-  build-and-deploy:
+  tests:
     runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres:13.10
+        env:
+          POSTGRES_USER: django_user
+          POSTGRES_PASSWORD: django_password
+          POSTGRES_DB: django_db
+        ports:
+          - 5432:5432
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+      - name: Check out code
+        uses: actions/checkout@v3
 
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
-          python-version: '3.9'
+          python-version: 3.9
 
       - name: Install dependencies
         run: |
-          pip install flake8
-          pip install -r backend/requirements.txt
+          python -m pip install --upgrade pip
+          pip install flake8==6.0.0 flake8-isort==6.0.0
+          pip install -r ./backend/requirements.txt
 
-      - name: Lint code with flake8
-        run: flake8 backend/
-
-      - name: Run backend tests
+      - name: Lint and Test
+        env:
+          POSTGRES_USER: django_user
+          POSTGRES_PASSWORD: django_password
+          POSTGRES_DB: django_db
+          DB_HOST: 127.0.0.1
+          DB_PORT: 5432
         run: |
-          cd backend
+          python -m flake8 backend/
+          cd backend/
           python manage.py test
 
-      - name: Run frontend tests
-        run: |
-          cd frontend
-          npm install
-          npm test
+  build_and_push_to_docker_hub:
+    name: Build and Push Docker Images
+    runs-on: ubuntu-latest
+    needs: tests
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v3
 
-      - name: Build and push Docker images
-        run: |
-          echo ${{ secrets.DOCKER_HUB_PASSWORD }} | docker login -u ${{ secrets.DOCKER_HUB_USERNAME }} --password-stdin
-          docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/kittygram_backend ./backend
-          docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/kittygram_frontend ./frontend
-          docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/kittygram_gateway ./nginx
-          docker push ${{ secrets.DOCKER_HUB_USERNAME }}/kittygram_backend
-          docker push ${{ secrets.DOCKER_HUB_USERNAME }}/kittygram_frontend
-          docker push ${{ secrets.DOCKER_HUB_USERNAME }}/kittygram_gateway
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
-      - name: Deploy to server
-        uses: appleboy/ssh-action@v0.1.4
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
         with:
-          host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SERVER_USER }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and Push Backend Image
+        uses: docker/build-push-action@v4
+        with:
+          context: ./backend/
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/kittygram_backend:latest
+
+      - name: Build and Push Frontend Image
+        uses: docker/build-push-action@v4
+        with:
+          context: ./frontend/
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/kittygram_frontend:latest
+
+      - name: Build and Push Gateway Image
+        uses: docker/build-push-action@v4
+        with:
+          context: ./nginx/
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/kittygram_gateway:latest
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build_and_push_to_docker_hub
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v3
+
+      - name: Copy docker-compose.production.yml via SSH
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USER }}
           key: ${{ secrets.SSH_KEY }}
-          script: |
-            cd ~/kittygram/
-            docker-compose pull
-            docker-compose up -d --build
-            docker-compose exec backend python manage.py migrate --noinput
-            docker-compose exec backend python manage.py collectstatic --noinput
+          passphrase: ${{ secrets.SSH_PASSPHRASE }}
+          source: "docker-compose.production.yml"
+          target: "/home/${{ secrets.USER }}/kittygram"
 
-      - name: Send Telegram notification
-        uses: appleboy/telegram-action@v0.2.5
+      - name: Executing remote SSH commands to deploy
+        uses: appleboy/ssh-action@master
         with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USER }}
+          key: ${{ secrets.SSH_KEY }}
+          passphrase: ${{ secrets.SSH_PASSPHRASE }}
+          script: |
+            cd /home/${{ secrets.USER }}/kittygram
+            sudo docker compose -f docker-compose.production.yml pull
+            sudo docker compose -f docker-compose.production.yml down
+            sudo docker compose -f docker-compose.production.yml up -d
+            sudo docker compose -f docker-compose.production.yml exec backend python manage.py migrate
+            sudo docker compose -f docker-compose.production.yml exec backend python manage.py collectstatic --noinput
+
+  send_message:
+    runs-on: ubuntu-latest
+    needs: deploy
+    steps:
+      - name: Send Telegram message
+        uses: appleboy/telegram-action@master
+        with:
+          to: ${{ secrets.TELEGRAM_TO }}
           token: ${{ secrets.TELEGRAM_TOKEN }}
-          chat-id: ${{ secrets.TELEGRAM_CHAT_ID }}
-          message: 'Kittygram deployed successfully!'
+          message: "Деплой успешно выполнен!"
