--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,11 +11,13 @@ services:
     env_file: .env
     volumes:
       - pg_data:/var/lib/postgresql/data
+
   backend:
     build: ./backend/
     env_file: .env
     volumes:
       - static:/backend_static
+      - media:/backend_media
 
   frontend:
     env_file: .env
@@ -24,8 +26,8 @@ services:
     volumes:
       - static:/frontend_static
 
-  gateway:
-    build: ./gateway/
+  nginx:
+    build: ./nginx/
     env_file: .env
     volumes:
       - static:/var/www/kittygram/static
