--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -86,12 +86,13 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    needs: build_and_push_to_docker_hub
+    needs:
+      - build_and_push_to_docker_hub
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
 
-      - name: Copy docker-compose.production.yml via SSH
+      - name: Copy docker-compose.yml via SSH
         uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.HOST }}
@@ -115,6 +116,7 @@ jobs:
             sudo docker compose -f docker-compose.production.yml up -d
             sudo docker compose -f docker-compose.production.yml exec backend python manage.py migrate
             sudo docker compose -f docker-compose.production.yml exec backend python manage.py collectstatic --noinput
+            sudo docker compose -f docker-compose.production.yml exec backend cp -r /app/collected_static/. /backend_static/static/
 
   send_message:
     runs-on: ubuntu-latest
