--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -7,7 +7,7 @@ COPY requirements.txt .
 RUN pip install -r requirements.txt --no-cache-dir
 
 COPY . .
-
-RUN python manage.py collectstatic --noinput
+RUN mkdir -p /app/collected_static /app/media \
+    && python manage.py collectstatic --noinput
 
 CMD ["gunicorn", "--bind", "0.0.0.0:8081", "kittygram_backend.wsgi"]
