--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -17,14 +17,15 @@ services:
       - static:/app/collected_static
       - media:/app/media
     ports:
-      - "8081:8081"
+      - "8081:8080"
     depends_on:
       - db
+    command: sh -c "mkdir -p /backend_static/static /app/media && gunicorn kittygram_backend.wsgi:application --bind 0.0.0.0:8081"
 
   frontend:
     image: fyrno/kittygram_frontend
     env_file: .env
-    command: cp -r /app/build/. /frontend_static/
+    command: sh -c "mkdir -p /frontend_static && cp -r /app/build/. /frontend_static/"
     volumes:
       - static:/frontend_static
     ports:
@@ -37,7 +38,7 @@ services:
       - static:/var/www/kittygram/static
       - media:/var/www/kittygram/media
     ports:
-      - "80:80"
+      - "8080:80"
     depends_on:
       - backend
       - frontend
