--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,8 @@
-POSTGRES_DB=kittygram_db
-POSTGRES_USER=kittygram_user
-POSTGRES_PASSWORD=your_strong_password
-DB_HOST=db
-DB_PORT=5432
+POSTGRES_USER=django_user
+POSTGRES_PASSWORD=password
+POSTGRES_DB=django
 
-SECRET_KEY=your_secret_key
-DEBUG=False
-ALLOWED_HOSTS=your_domain.com
+DB_HOST=db
+DB_PORT=host
+
+SECRET_KEY = key
