--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,9 +4,10 @@ WORKDIR /app
 
 COPY requirements.txt .
 
-RUN pip install -r requirements.txt --no-cache-dir
+RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
-RUN python manage.py collectstatic --noinput
 
-CMD ["gunicorn", "--bind", "0.0.0.0:8081", "kittygram_backend.wsgi"]
+RUN mkdir -p /app/static /app/media
+
+CMD sh -c "python manage.py migrate && python manage.py collectstatic --noinput && gunicorn --bind 0.0.0.0:8081 kittygram_backend.wsgi"
