--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -100,7 +100,7 @@ jobs:
           push: true
           tags: fyrno/kittygram_frontend:latest
 
-  build_gateway_and_push_to_docker_hub:
+  build_nginx_and_push_to_docker_hub:
     name: Push gateway Docker image to DockerHub
     runs-on: ubuntu-latest
     steps:
@@ -118,7 +118,7 @@ jobs:
         with:
           context: ./gateway/
           push: true
-          tags: fyrno/kittygram_gateway:latest
+          tags: fyrno/kittygram_nginx:latest
   deploy:
     runs-on: ubuntu-latest
     needs:
