--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3'
 
 volumes:
   pg_data:
@@ -7,7 +6,7 @@ volumes:
 
 services:
   db:
-    image: postgres:13
+    image: postgres:13.10
     env_file: .env
     volumes:
       - pg_data:/var/lib/postgresql/data
@@ -30,7 +29,7 @@ services:
     build: ./nginx/
     env_file: .env
     volumes:
-      - static:/var/www/kittygram/static
-      - media:/var/www/kittygram/media
+      - static:/staticfiles
+      - media:/mediafiles
     ports:
-      - 8080:80
+      - 9000:80
