--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,28 +2,23 @@ server {
     server_name fyrno.ru;
 
     location /api/ {
-        proxy_pass http://127.0.0.1:8080;
+        proxy_pass http://127.0.0.1:9000;
         proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
     }
 
     location /admin/ {
-        proxy_pass http://127.0.0.1:8080;
+        proxy_pass http://127.0.0.1:9000;
         proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-    }
-
-    location /static/ {
-        alias /var/www/kittygram/static/;
-    }
-
-    location /media/ {
-        alias /var/www/kittygram/media/;
     }
 
     location / {
-        root   /var/www/kittygram;
-        index  index.html index.htm;
-        try_files $uri /index.html;
+        alias /staticfiles/;
+        try_files $uri $uri/ /index.html;
     }
+
+    location /media/ {
+        alias /mediafiles/;
+        proxy_set_header Host $host;
+    }
+
 }
