--- a/setup.cfg
+++ b/setup.cfg
@@ -3,14 +3,6 @@
 ignore =
     W503,
     F811,
-    D100,
-    D101,
-    D105,
-    D102,
-    D106,
-    D104,
-    N806,
-    I003
 # Не проверять код в перечисленных директориях:
 exclude =
     tests/,
@@ -21,4 +13,4 @@ exclude =
     */env/,
 # Не проверять указанные файлы на соответствие определённым правилам:
 per-file-ignores =
-    */settings.py:E501,W503,F811
+    */settings.py
