--- a/setup.cfg
+++ b/setup.cfg
@@ -3,13 +3,20 @@
 ignore =
     W503,
     F811,
+    D100,
+    D101,
+    D102,
+    D103,
+    D104,
+    D105,
+    D106,
 # Не проверять код в перечисленных директориях:
 exclude =
     tests/,
     */migrations/,
     venv/,
     */venv/,
-    env/
+    env/,
     */env/,
 # Не проверять указанные файлы на соответствие определённым правилам:
 per-file-ignores =
