--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,12 +2,12 @@ server {
     server_name fyrno.ru;
 
     location /api/ {
-        proxy_pass http://127.0.0.1:9000;
+        proxy_pass http://backend:9000;
         proxy_set_header Host $host;
     }
 
     location /admin/ {
-        proxy_pass http://127.0.0.1:9000;
+        proxy_pass http://backend:9000;
         proxy_set_header Host $host;
     }
 
@@ -18,7 +18,6 @@ server {
 
     location /media/ {
         alias /mediafiles/;
-        proxy_set_header Host $host;
+        try_files $uri $uri/ =404;
     }
-
 }
