--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -98,7 +98,7 @@ jobs:
         with:
           context: ./frontend/
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/kittygram_frontend:latest
+          tags: fyrno/kittygram_frontend:latest
 
   build_nginx_and_push_to_docker_hub:
     name: Push gateway Docker image to DockerHub
@@ -118,7 +118,7 @@ jobs:
         with:
           context: ./nginx/
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/kittygram_nginx:latest
+          tags: fyrno/kittygram_nginx:latest
   deploy:
     runs-on: ubuntu-latest
     needs:
