--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,9 @@ on:
 jobs:
   tests:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [ 3.8, 3.9, 3.10 ]
     services:
       postgres:
         image: postgres:13.10
@@ -23,7 +26,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: 3.9
+          python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip 
@@ -162,4 +165,8 @@ jobs:
         with:
           to: ${{ secrets.TELEGRAM_TO }}
           token: ${{ secrets.TELEGRAM_TOKEN }}
-          message: "Деплой успешно выполнен!"
+          message: |
+            ✅ Деплой успешно выполнен!
+            📅 Коммит сделан пользователем: ${{ github.actor }}
+            📝 Сообщение коммита: ${{ github.event.commits[0].message }}
+            🔗 [Ссылка на коммит](https://github.com/${{ github.repository }}/commit/${{ github.sha }})
