--- a/kittygram_workflow.yml
+++ b/kittygram_workflow.yml
@@ -8,6 +8,9 @@ on:
 jobs:
   tests:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [ 3.8, 3.9, 3.10 ]
     services:
       postgres:
         image: postgres:13.10
@@ -23,7 +26,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: 3.9
+          python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip 
@@ -60,7 +63,7 @@ jobs:
         with:
           context: ./backend/
           push: true
-          tags: fyrno/kittygram_backend:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/kittygram_backend:latest
 
   frontend_tests:
     runs-on: ubuntu-latest
@@ -98,7 +101,7 @@ jobs:
         with:
           context: ./frontend/
           push: true
-          tags: fyrno/kittygram_frontend:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/kittygram_frontend:latest
 
   build_nginx_and_push_to_docker_hub:
     name: Push gateway Docker image to DockerHub
@@ -118,21 +121,18 @@ jobs:
         with:
           context: ./nginx/
           push: true
-          tags: fyrno/kittygram_nginx:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/kittygram_nginx:latest
   deploy:
     runs-on: ubuntu-latest
     needs:
-      # Дождёмся билда всех образов Taski
       - build_and_push_to_docker_hub
       - build_frontend_and_push_to_docker_hub
       - build_nginx_and_push_to_docker_hub
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
-      # Копируем docker-compose.production.yml на продакшен-сервер
       - name: Copy docker-compose.yml via ssh
         uses: appleboy/scp-action@master
-        # Передаём параметры для action appleboy/scp-action:
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USER }}
@@ -147,9 +147,6 @@ jobs:
           username: ${{ secrets.USER }}
           key: ${{ secrets.SSH_KEY }}
           passphrase: ${{ secrets.SSH_PASSPHRASE }}
-          # Параметр script передаёт в action appleboy/ssh-action команды,
-          # которые нужно выполнить на сервере,
-          # с которым установлено соединение
           script: |
             cd kittygram
             sudo docker compose -f docker-compose.production.yml pull
@@ -168,4 +165,8 @@ jobs:
         with:
           to: ${{ secrets.TELEGRAM_TO }}
           token: ${{ secrets.TELEGRAM_TOKEN }}
-          message: "Деплой успешно выполнен!"
+          message: |
+            ✅ Деплой успешно выполнен!
+            📅 Коммит сделан пользователем: ${{ github.actor }}
+            📝 Сообщение коммита: ${{ github.event.commits[0].message }}
+            🔗 [Ссылка на коммит](https://github.com/${{ github.repository }}/commit/${{ github.sha }})
